[gd_scene load_steps=5 format=3 uid="uid://dm5yftn60gmxe"]

[ext_resource type="Theme" uid="uid://c3u7pkv4gva6m" path="res://Scenes/UIs/UI_Settings/PurpleMana.tres" id="1_badhu"]
[ext_resource type="Script" path="res://Scenes/UIs/Player_HUD/PlayerHUD.gd" id="2_4bcoa"]
[ext_resource type="Texture2D" uid="uid://do8k1ym2dt4l4" path="res://Assets/Sprites/Empty_Heart.png" id="4_q81pc"]
[ext_resource type="Texture2D" uid="uid://c5sfcoai3gbnk" path="res://Assets/Sprites/Empty_Charge.png" id="4_uwo0r"]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_badhu")
script = ExtResource("2_4bcoa")

[node name="Hearts" type="HBoxContainer" parent="."]
texture_filter = 1
layout_direction = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 47.0
offset_right = 64.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme = ExtResource("1_badhu")
theme_override_constants/separation = 20
alignment = 1

[node name="HeartContainer1" type="Control" parent="Hearts"]
layout_mode = 2

[node name="Heart1" type="Sprite2D" parent="Hearts/HeartContainer1"]
texture = ExtResource("4_q81pc")

[node name="HeartContainer2" type="Control" parent="Hearts"]
layout_mode = 2

[node name="Heart2" type="Sprite2D" parent="Hearts/HeartContainer2"]
texture = ExtResource("4_q81pc")

[node name="HeartContainer3" type="Control" parent="Hearts"]
layout_mode = 2

[node name="Heart3" type="Sprite2D" parent="Hearts/HeartContainer3"]
texture = ExtResource("4_q81pc")

[node name="Charges" type="HBoxContainer" parent="."]
texture_filter = 1
layout_direction = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 813.0
offset_top = 47.0
offset_right = 881.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme = ExtResource("1_badhu")
theme_override_constants/separation = 20
alignment = 1

[node name="ChargeContainer1" type="Control" parent="Charges"]
layout_mode = 2

[node name="Charge1" type="Sprite2D" parent="Charges/ChargeContainer1"]
texture = ExtResource("4_uwo0r")

[node name="ChargeContainer2" type="Control" parent="Charges"]
layout_mode = 2

[node name="Charge2" type="Sprite2D" parent="Charges/ChargeContainer2"]
texture = ExtResource("4_uwo0r")

[node name="ChargeContainer3" type="Control" parent="Charges"]
layout_mode = 2

[node name="Charge3" type="Sprite2D" parent="Charges/ChargeContainer3"]
texture = ExtResource("4_uwo0r")
